# sig

./: Cargo.toml  README.md  default.toml  dist-workspace.toml
.github/workflows/: release.yml
assets/: sig.static.tape  sig.tape
src/: archived.rs  config.rs  highlight.rs  main.rs  mouse.rs  sig.rs  spawn.rs  terminal.rs
src/archived/: keymap.rs
src/sig/: keymap.rs
