[package]
name = "sigrs"
version = "0.2.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Interactive grep (for streaming)"
repository = "https://github.com/ynqa/sig"
license = "MIT"
readme = "README.md"

[[bin]]
name = "sig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
grep = "0.3.2"
promkit = "0.10.1"
promkit-core = "0.2.0"
promkit-widgets = { version = "0.2.0", features = ["texteditor", "listbox"] }
rayon = "1.11.0"
regex = "1.11.2"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.37.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
