[package]
name = "sigrs"
version = "0.3.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Interactive grep (for streaming)"
repository = "https://github.com/ynqa/sig"
license = "MIT"
readme = "README.md"

[[bin]]
name = "sig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
grep = "0.4.1"
promkit = "0.10.1"
promkit-core = "0.2.0"
promkit-widgets = { version = "0.2.0", features = ["texteditor", "listbox"] }
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
termcfg = { version = "0.2.0", features = ["crossterm_0_29_0"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
